fix body overflow

--- a/css/scss/pages/_homepage.scss
+++ b/css/scss/pages/_homepage.scss
@@ -1,4 +1,7 @@
 /*Start header*/
+.body-hidden {
+  overflow: hidden;
+}
 h2 {
   @include media-575 {
     font-size: 1.2rem !important;
